# codex

./: pyproject.toml
codex/: configuration.py
codex-navigator/: package.json
codex-navigator/public/: index.html
codex-navigator/src/: App.css  App.js  Routing.js  env.js
codex-navigator/src/Components/: DashboardTabs.js  Home.js  Landing.js  Login.js  Login.module.css  LoginRedirect.js  Navi.js  Redirect.js  ServerChooser.js  ServerChooser.module.css  SpecificRedirect.js
codex-navigator/src/Components/Bricks/: Box.js  Box.module.css  BreakPanel.js  BreakPanel.module.css  FilterDropdown.js  Jumbotron.js  Jumbotron.module.css  ListBuilder.js  MDEStyle.js  MultiverseBuilder.js  MultiverseExplorer.js  MultiverseExplorer.module.css  OverPanel.js  OverPanel.module.css  Panel.js  Panel.module.css  Picker.js  Picker.module.css  RelationshipBuilder.js
codex-navigator/src/Components/Creation/: CampaignPanel.js  CampaignPanel.module.css  CharacterPanel.js  Creation.js  Creation.module.css  CreationRouter.js  MultiverseExplorer.js  SettingPanel.js  UpdateTab.js  WorldPanel.js
codex-navigator/src/Components/Explorer/: DetailsTab.js  ExplorePanel.js  ExploreTab.js  SearchPanel.js  SearchPanel.module.css  SearchResult.js
codex-navigator/src/libs/: Context.js
codex/database/: __init__.py  db.py  models.py
codex/web/: __main__.py  app.py  authentication.py  description.md
codex/web/crud/: __init__.py
codex/web/errors/: __init__.py
codex/web/handlers/: __init__.py
codex/web/models/: base.py  edit.py  error.py  full.py  read.py
(+12 files in other folders)
